--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,10 @@
   <title>{{.Name}}</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" href="https://fonts.gstatic.com/s/jetbrainsmono/v21/tDbY2o-flEEny0FZhsfKu5WU4zr3E_BX0PnT8RD8yKxjPVmUsaaDhw.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="https://fonts.gstatic.com/s/anton/v25/1Ptgg87GJOHfKvEgnxY.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="icon" type="image/x-icon" href="{{.Favicon}}">
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=JetBrains+Mono:wght@400;700&display=block" rel="stylesheet">
   <style>{{.CSS}}</style>
 </head>
 <body>
